--- a/documentation/intro.tex
+++ b/documentation/intro.tex
@@ -10,257 +10,262 @@
 Easel is a C code library that underlies some of the bioinformatics
 software packages from the Eddy lab, including HMMER and Infernal, the
 software engines that in turn underlie the Pfam protein family
-database and the Rfam RNA family database. Easel is meant to maintain
+database and the Rfam RNA family database. Easel is meant to organize
 a body of work from my lab in a useful form, such that new people in
-the lab can avoid reinventing the wheel as many times as I have.
+my lab can avoid reinventing the wheel as many times as I
+have. Perhaps it will also be useful to you.
 
-Easel has arisen by accretion. As such, it is not intended to be an
-all-purpose sequence analysis library.  General-purpose bioinformatics
-libraries are available that do aspire to such goals. The NCBI Toolkit
-and the Ajax library in EMBOSS are comprehensive resources for C
-programming. The BioPerl project is an extraordinary resource for
-Perl.
+%% Easel arose by accretion. It is not intended to be an all-purpose
+%% sequence analysis library. General-purpose bioinformatics libraries
+%% are available that do aspire to such goals. The NCBI Toolkit and the
+%% Ajax library in EMBOSS are comprehensive resources for C
+%% programming. The BioPerl project is an extraordinary resource for
+%% Perl.
 
-Easel's design reflects some of my opinions about the way the world
-should work but usually doesn't. First, it is \textbf{documented}.
-And not just by mass of paper -- there are tutorial examples to every
-Easel API, intended to make it easy to start using any given Easel
-module.
+I have strong opinions about why code is not re-used more often in
+bioinformatics, and Easel's design reflects those opinions. Easel is
+\textbf{documented} with tutorial examples that are intended to make
+it easy to get started with any given Easel module. It is
+\textbf{modular}, to help you extract individual files or functions
+for use in your own code, without having to disentangle the entire
+library. It is \textbf{freely distributed} as open source code, under
+the Creative Commons Attribution License, which permits you to use and
+modify Easel for any purpose.
 
+Each \ccode{.c} file in Easel corresponds to one Easel \emph{module},
+which consists of a group of functions for some
+task. Table~\ref{tbl:module_list} shows an overview of all the
+modules.  The \eslmod{sqio} module can automatically parse many common
+unaligned sequence formats, and the \eslmod{msa} module can parse many
+common multiple alignment formats.
 
-
-\begin{description}
-
-\item[\textbf{Documentation.}]  Effort has been invested in practical
-documentation, including this Guide, tutorial examples to Easel APIs,
-and source-level comments. All too often I've tried to obtain
-someone's routine and ended up unable to understand how to use it
-because of missing, incomplete, or obsolete documentation.
-
-\item[\textbf{Modularity.}]  Easel is designed to minimize
-dependencies between its routines, to help you take individual files
-(or individual routines) for your use, without having to include the
-entire library. All too often I've tried to obtain a routine and found
-it deeply entangled in a large library. I can either package the whole
-library in my software distribution (cumbersome, and a potential
-maintainability headache in the long run), or I try to understand the
-code well enough to disentangle it. Usually it seems easier to rewrite
-it from scratch.
-
-\item[\textbf{No license encumbrance.}]  Easel is freely available
-under a Creative Commons Attribution License. You can use it for
-anything you want, even commercial products, so long as you keep my
-copyright and license notice on the code. All too often I've tried to
-reuse a routine and been blocked by someone's license terms. Even some
-open source licenses, such as the GNU General Public License (GPL),
-can impede right-minded developers who use incompatible open-source
-licenses. The CC license provides me some minimal legal ablative
-armor, just in case you're the type that sues people that give you
-stuff for free.
-\end{description}
-
-\section{Overview of modules}
-
-Each \ccode{.c} file in Easel corresponds to one Easel \emph{module}.
-
-Parsing the variety of different sequence file formats, for instance,
-is common problem. The \eslmod{sqio} module (which shares some remote
-lines of descent from Don Gilbert's classic ReadSeq package) can
-automatically parse many common unaligned sequence formats, and the
-\eslmod{msa} module can parse many common multiple alignment formats.
-
-\begin{tabular}{llll}\hline
-\textbf{Module} & \textbf{Description}       & \textbf{Requires} & \textbf{Augmentation(s)}\\\hline
-  \multicolumn{4}{c}{\textbf{Core module:}}\\
-\eslmod{easel}  & Framework for using Easel         &  -     & \\
-  \multicolumn{4}{c}{\textbf{Foundation modules:}}\\
-\eslmod{alphabet} & Digitized biosequence alphabets   & easel  & \\
-\eslmod{dmatrix}         & Matrix algebra                    & easel  & \\ 
-\eslmod{fileparser}      & Token-based data file input       & easel  & \\
-\eslmod{getopts}         & Command line parsing              & easel  & \\
-\eslmod{keyhash}         & Keyword hashing                   & easel  & \\
-\eslmod{msa}             & Multiple sequence alignment i/o   & easel  & keyhash \\
-\eslmod{random}          & Random number generator           & easel  & \\
-\eslmod{regexp}          & Regular expression matching       & easel  & \\
-\eslmod{sqio}            & Sequence file i/o                 & easel  & alphabet, msa\\
-\eslmod{stack}           & Pushdown stacks                   & easel  & \\
-\eslmod{vectorops}       & Vector operations                 & easel  & \\\hline
-  \multicolumn{4}{c}{\textbf{Derived modules:}}\\
-\eslmod{bioparse\_paml}  & PAML rate matrix datafiles        & easel dmatrix parse & \\
-\eslmod{minimizer}       & Multidimensional optimization     & easel vectorops  & \\
-\eslmod{ratematrix}      & Evolutionary rate matrices        & easel dmatrix vectorops & \\
-\eslmod{wuss}            & RNA structure annotation          & easel stack    & \\\hline
-  \multicolumn{4}{c}{\textbf{Statistics modules:}}\\
-\eslmod{stats}        & Subcore for all statistics. & easel       & \\hline
-\eslmod{dirichlet}    & Dirichlet densities.        & easel stats vectorops & fileparser, random\\
-\eslmod{exponential}  & Exponential densities.      & easel stats & histogram random \\ 
-\eslmod{gamma}        & Gamma densities.            & easel stats & random \\ 
-\eslmod{gev}          & Generalized extreme value (GEV) densities. & easel stats vectorops & random, minimizer \\
-\eslmod{gumbel}       & Gumbel densities.           & easel stats vectorops  & random, minimizer \\
-\eslmod{hyperexp}     & Hyperexponential densities. & easel stats vectorops exponential & random, histogram, minimizer, fileparser \\
-\eslmod{mixdchlet}    & Mixture Dirichlet densities.& easel stats & \\
-\eslmod{mixgev}       & Mixture GEV densities.      & easel stats vectorops gev & random, minimizer \\
-\eslmod{stretchexp}   & Stretched exponential densities. & easel stats vectorops & random, histogram, minimizer \\
-\eslmod{weibull}      & Weibull densities.          & easel stats vectorops & random, histogram \\
-  \multicolumn{4}{c}{\textbf{Optional library interfaces:}}\\
-interface\_gsl    & GNU Scientific Library          & easel dmatrix & \\
-interface\_lapack & LAPACK linear algebra library   & easel dmatrix & \\\hline
+% documentation/esl-depends.pl
+% can autoextract the module dependencies, including augmentations,
+% but this table seems to work best as a simple list of modules.
+%
+\begin{table}
+\begin{center}
+\begin{tabular}{lll}\hline
+\textbf{Module} & \textbf{Description} \\
+  \multicolumn{2}{c}{\textbf{Foundation:}}\\
+%
+\eslmod{easel}           & Framework for using Easel & \\
+%
+  \multicolumn{2}{c}{\textbf{Core modules:}}\\
+%
+\eslmod{alphabet}        & Digitized biosequence alphabets        \\
+\eslmod{dmatrix}         & Matrix algebra                         \\
+\eslmod{fileparser}      & Input of simple token-based data files \\
+\eslmod{getopts}         & Command line parsing                   \\
+\eslmod{keyhash}         & Keyword hashing                        \\
+\eslmod{msa}             & Multiple sequence alignment i/o        \\
+\eslmod{random}          & Random number generator                \\
+\eslmod{regexp}          & Regular expression matching            \\
+\eslmod{sqio}            & Sequence file i/o                      \\
+\eslmod{ssi}             & Indices for large sequence files       \\
+\eslmod{stack}           & Pushdown stacks                        \\
+\eslmod{stats}           & Foundation for statistics group        \\
+\eslmod{stopwatch}       & Timing parts of programs               \\
+\eslmod{vectorops}       & Vector operations                      \\
+%
+  \multicolumn{2}{c}{\textbf{Numerical computing group:}}\\
+%
+\eslmod{minimizer}       & Multidimensional optimization          \\
+%
+  \multicolumn{2}{c}{\textbf{Statistics group:}}             \\
+%
+\eslmod{histogram}    & Collecting/fitting data histograms   \\
+\eslmod{dirichlet}    & Dirichlet densities.                 \\
+\eslmod{exponential}  & Exponential densities.               \\
+\eslmod{gamma}        & Gamma densities.                     \\
+\eslmod{gev}          & Generalized extreme value (GEV) densities \\
+\eslmod{gumbel}       & Gumbel densities.                    \\
+\eslmod{hyperexp}     & Hyperexponential densities.          \\
+\eslmod{mixdchlet}    & Mixture Dirichlet densities.         \\
+\eslmod{mixgev}       & Mixture GEV densities.              \\
+\eslmod{stretchexp}   & Stretched exponential densities.    \\
+\eslmod{weibull}      & Weibull densities.                  \\
+%
+  \multicolumn{2}{c}{\textbf{Miscellaneous:}}\\
+\eslmod{bioparse\_paml}  & PAML rate matrix datafiles        \\
+\eslmod{ratematrix}      & Evolutionary rate matrices        \\
+\eslmod{wuss}            & RNA structure annotation          \\
+%
+  \multicolumn{2}{c}{\textbf{Optional library interfaces:}}\\
+%
+interface\_gsl    & GNU Scientific Library          \\
+interface\_lapack & LAPACK linear algebra library   \\
+\hline
 \end{tabular}
+\end{center}
+\caption{Overview of Easel's modules.}
+\label{tbl:module_list}
+\end{table}
+
+
+The normal way to use Easel would be as a C library
+(\ccode{libeasel.a}) that you link with your code. Easel is also
+designed to be sufficiently modular that you can grab individual
+source files out of the library and use them directly in your
+code. For example, to get Easel's sequence file i/o API, for example,
+you can take the sqio module (the C source \ccode{esl\_sqio.c} and the
+header \ccode{esl\_sqio.h}), plus the obligatory Easel core
+(\ccode{easel.c} and \ccode{easel.h}). Many of Easel's modules are
+free-standing, and only depend on the foundation \eslmod{easel}
+module. Some modules require a few other modules, but the total number
+of modules you have to take to get any particular Easel API is always
+small. Each module's documentation shows its required dependencies.
+
+To minimize the number of modules you need to take to get some part of
+Easel into your code, Easel uses a concept it calls
+\emph{augmentation}. Each module provides a base functionality that is
+as simple as possible, and which depends on as few other modules as
+possible. When more powerful functionality would require additional
+modules, where possible, Easel isolates that functionality and makes
+it optional. You can \emph{augment} the module and activate these more
+powerful optional abilities by providing the appropriate modules, or
+you can leave the optional modules out.  For example, if you use only
+the \eslmod{sqio} module, you get the ability to read unaligned
+sequence files like FASTA or Genbank; but if you augment \eslmod{sqio}
+with the \eslmod{msa} multiple alignment module, you gain the ability
+to read individual sequences from multiple alignment files
+sequentially. At compile-time, you declare (by means of
+\ccode{\#define} flags in \ccode{easel.h}) what modules you've taken,
+which defines what augmentations are possible. Each module's
+documentation shows what optional augmentations are activated by other
+modules. Of course, when Easel is used as a complete
+\ccode{libeasel.a} library, all modules are fully augmented.
 
 
 
-\section{Overview of data structures}
 
+Many modules are organized around one or a few ``objects'' (usually a
+C structure). Table~\ref{tbl:object_list} shows an overview of the
+objects you might use (there are a few more objects that are used
+internally). This quasi-object-orientation is used to simplify the
+code design, focusing each module around a common datatype. 
+
+\begin{table}
 \begin{tabular}{lll}\hline
 \textbf{Object}          & \textbf{Implemented in} & \textbf{Description}\\\hline
 \ccode{ESL\_ALPHABET}    & \cfile{alphabet}        & Digitized sequence alphabet\\
 \ccode{ESL\_DMATRIX}     & \cfile{dmatrix}         & 2D double-precision matrix for linear algebra \\
 \ccode{ESL\_FILEPARSER}  & \cfile{fileparser}      & Token-based input file parser\\
 \ccode{ESL\_GETOPTS}     & \cfile{getopts}         & Application configuration state\\
+\ccode{ESL\_HISTOGRAM}   & \cfile{histogram}       & Collecting/fitting data histograms\\
 \ccode{ESL\_HYPEREXP}    & \cfile{hyperexp}        & Hyperexponential distribution\\
 \ccode{ESL\_KEYHASH}     & \cfile{keyhash}         & Keyword hash table\\
 \ccode{ESL\_MIXDCHLET}   & \cfile{dirichlet}       & Mixture Dirichlet prior\\
 \ccode{ESL\_MIXGEV}      & \cfile{mixgev}          & Mixture generalized EVD\\
 \ccode{ESL\_MSA}         & \cfile{msa}             & Multiple sequence alignment\\
 \ccode{ESL\_MSAFILE}     & \cfile{msa}             & Multiple sequence alignment file parser\\
+\ccode{ESL\_NEWSSI}      & \cfile{ssi}             & New SSI index being created\\
+\ccode{ESL\_OPTIONS}     & \cfile{getopts}         & Configuration of a command-line option\\
 \ccode{ESL\_PERMUTATION} & \cfile{dmatrix}         & Permutation matrix used in linear algebra\\
 \ccode{ESL\_RANDOMNESS}  & \cfile{random}          & Random number generator\\
 \ccode{ESL\_REGEXP}      & \cfile{regexp}          & Regular expression pattern-matching machine\\
-\ccode{ESL\_SEQFILE}     & \cfile{sqio}            & Biosequence file parser (unaligned)\\
 \ccode{ESL\_SQ}          & \cfile{sqio}            & DNA/RNA/protein sequence data\\
-\ccode{ESL\_STACK}       & \cfile{stack}           & Pushdown stack\\\hline
+\ccode{ESL\_SQFILE}      & \cfile{sqio}            & Biosequence file parser (unaligned)\\
+\ccode{ESL\_SSI}         & \cfile{ssi}             & An SSI index being used\\
+\ccode{ESL\_STACK}       & \cfile{stack}           & Pushdown stack\\
+\ccode{ESL\_STOPWATCH}   & \cfile{stopwatch}       & Timer for parts of a program\\
+\hline
 \end{tabular}
+\caption{Overview of Easel's objects.}
+\label{tbl:object_list}
+\end{table}
 
-\section{Using Easel as a library, or as individual modules}
-
-Easel is designed to be used in two different ways: as a C library
-(\ccode{libeasel.a}) in the usual C way, or by grabbing individual
-source files without the rest of the library.
-
-The ability to borrow individual files from Easel makes it different
-from many other C libraries. For example, to get Easel's sequence file
-i/o API, for example, you just take the sqio module (the C source
-\ccode{esl\_sqio.c} and the header \ccode{esl\_sqio.h}), plus the
-obligatory Easel core (\ccode{easel.c} and \ccode{easel.h}). Most of
-Easel's modules can stand alone in this way (the \emph{base}
-modules). Only a few are dependent on other modules (the
-\emph{derived} modules), though even these can be used just by
-bringing along the modules they depend on.
-
-There are a couple of reasons to provide standalone capability. One
-reason came from teaching a computational molecular biology
-course. For homework programming assignments, I wanted to provide
-students with simple .c files with well-documented APIs for routine
-things like sequence i/o. This was to give them a head start, save
-them from implementing boring things, and let them concentrate on
-learning algorithms. But at the same time, I wanted them to be able to
-see where the functionality was coming from, and to study the .c files
-if they wanted, rather than treating the library as a black box -- so
-I wanted to give them a few .c files at a time, not a library.
-
-A second reason comes from my frustration with C libraries and code
-reuse in bioinformatics in general. If I want to take a single routine
-from someone's library (say, gods help us, the NCBI Toolkit), it's
-common that that routine has dependencies, and the dependencies have
-dependencies, and pretty soon I'm dragging the whole damned library in
-just to have access to the routine I wanted. I don't mind that in
-standard, widely installed system libraries, but if I'm making a
-robustly distributable bioinformatics application, I need to include
-in my package all my nonstandard dependencies -- and I really don't
-want to have to distribute the entire GNU Scientific Library just to
-pick up two GSL functions, all of LAPACK to get one numerical routine,
-and the whole NCBI Toolkit to pick up one Toolkit routine.
-
-Thus, Easel is very strictly modular in design. You never need the
-entire Easel library to use any one aspect of Easel's
-functionality. Most often, you need only the module you're interested
-in, plus the core easel module.
-
-To facilitate code reuse, Easel is licensed under a permissive open
-source license (the Creative Commons Attribution License) that allows
-you to freely modify and redistribute the code.
-
-In the end, some of my original intent of providing simple
-implementations as teaching examples has been lost. Rather than
-providing two implementations (my intended simple teaching example and
-a full-strength production example), Easel code is all production
-code. But the modularity remains, and it seems to be useful in other
-respects.  Modular design is just a Good Thing in general.  Easel
-modules can be unit-tested in absence of the rest of the library.
-And, though this remains to be seen, it should be easy for other
-people to contribute modules and extend Easel, and it should be easy
-for people to borrow and reuse Easel code.
-
-\section{Easel's concept of module ``augmentation''}
-
-The trouble with enforcing strict modular design is that while
-\emph{you} (the application writer) can take advantage of any or all
-of Easel's functionality as you wish, \emph{Easel} can't. An Easel
-module, by design, is as isolated as possible from all other Easel
-modules. It shouldn't use any functionality other than the essentials
-in the core \eslmod{easel} module. But what if module X would benefit
-from the cool features of module Y -- for instance, what if we want
-the \eslmod{sqio} sequence i/o module to have access to the fast file
-indexing capabilities of the \eslmod{ssi} module?  Start down this
-road, and pretty soon the library is full of dependencies, the modular
-design collapses, and we're back to a standard all-or-none C library.
-
-Easel introduces a concept called \emph{augmentation}. The base
-functionality of many Easel modules can be optionally \emph{augmented}
-by one or more other Easel modules. An augmentation confers optional
-powers on a module beyond its default standalone behavior.
-
-Sometimes, an augmentation adds new functions to a module's API.  For
-example, \eslmod{alphabet} augmentation of the sequence i/o module
-\eslmod{sqio} adds a function to the \eslmod{sqio} API for digitizing
-a sequence.
-
-Sometimes, an augmentation extends or generalizes the scope of one or
-more functions in the API. For instance, augmenting the \eslmod{sqio}
-module with \eslmod{msa} gives the ability to read alignment files as
-if they were sequential, unaligned sequence databases through
-\eslmod{sqio}'s existing API.
-
-And sometimes, an augmentation invisibly makes existing functions
-faster or more memory-efficient, without adding any new functionality
-per se.  For example, \eslmod{msa} can be augmented by
-\eslmod{keyhash}, which makes the \eslmod{msa} module capable of
-handling much larger alignments more efficiently than it does by
-default, because \eslmod{keyhash} gives it the ability to use fast
-hashing methods in its parsers.
-
-When Easel is installed as a library, all modules are fully
-augmented. This is done when the library is compiled. The
-\ccode{configure} script automatically enables all augmentations when
-it sets up the \ccode{easel.h} header, before compiling and installing
-the library.
-
-When you borrow an individual module from Easel, you choose whether to
-borrow any modules that augment it. To activate an augmentation, you
-not only have to compile and link the C code for the extra module
-(obviously), you also edit a line in the \ccode{easel.h} header file
-before compilation. There is a section at the top of \ccode{easel.h}
-that declares which augmentations are to be enabled. You
-\ccode{\#define} the appropriate flag for your augmentation to
-activate it; for instance, to augment with \eslmod{ssi}, you make sure
-\ccode{easel.h} has a line \ccode{\#define eslAUGMENT\_SSI} in place
-of \ccode{\#undef eslAUGMENT\_SSI}.
-
-Documentation for modules and their functions always distinguishes
-between default functionality and augmented functionality.
+A pitfall of putting data into complex, custom datatypes is that this
+can impede code reuse. You don't want to understand what's in someone
+else's object, and you probably have your own favorite ways of
+organizing data.  Easel assumes you are only going to use Easel
+objects to call Easel functions, so you will build simple interfaces
+to exchange data between your code and Easel. Thus, there are always
+obvious ways to create new Easel objects from elemental data types,
+and to extract elemental data types from Easel objects. Easel objects
+are translucent, if not transparent; often, some of their internal
+data fields are stable and documented, and you are encouraged to reach
+into an object and access elemental data directly.
 
 
-\section{Test drivers and example code}
+\section{Quick start}
 
-At the end of each source code module is one or more \emph{drivers}
-that allow the module to be compiled and tested as independently as
-possible, with minimum dependencies on the rest of Easel.
+Let's assume you just want to take a quick tour, because you're
+deciding whether Easel is useful to you or not. You can compile Easel
+and try it out without installing it. It should compile out of the box
+on any UNIX, Linux, or Mac OS/X operating system with this incantation
+(where \ccode{xxx} is a version number):
 
-An \textbf{example} driver provides a \ccode{main()} that shows how to
-use the module. Example drivers are extracted verbatim from the source
-code for inclusion in the module chapters in this guide. Any command
-line arguments are documented both in the source code and in this
-guide. Example drivers are intended for anyone to use.
+\begin{cchunk}
+% tar zxf easel-xxx.tar.gz
+% cd easel-xxx
+% ./configure
+% make
+% make check
+\end{cchunk}
+
+The \ccode{make check} is optional. It runs a battery of quality
+control tests, all of which should pass. You should now see
+\ccode{libeasel.a} in the directory. That and the \ccode{.h} include
+files are all you need. If you decide you want to install Easel
+permanently, see the full installation instructions in
+chapter~\ref{chapter:installation}.
+
+
+Every source code module (\ccode{.c} file) ends with one or more
+\textbf{driver programs}, including programs for unit tests and
+benchmarks. These are \ccode{main()} functions that can be
+conditionally included when the module is compiled. Among them is
+always at least one \textbf{example} driver that shows how to use the
+module. You can find the example code in module \eslmod{foo} by
+searching the \ccode{esl\_foo.c} file for the tag
+\ccode{eslFOO\_EXAMPLE}. To compile the example for a module
+\eslmod{foo} as a working program, do:
+
+\begin{cchunk}
+   % cc -o example -L. -I. -DeslFOO_EXAMPLE esl_foo.c -leasel -lm
+\end{cchunk}
+
+You might need to replace the standard $\ccode{cc}$ with a different
+compiler name, depending on your system. Linking to the standard math
+library (\ccode{-lm}) may not be necessary, depending on what module
+you're compiling, but it won't hurt. The \ccode{-L.} and \ccode{-I.}
+options say that the library and the include files are in the current
+working directory (because you haven't installed them). Replace
+\ccode{foo} with the name of a module you want to play with, and you
+can compile any of Easel's example drivers this way.
+
+To run it, read the source code to see if it needs any command line
+arguments, like the name of a file to open, then:
+
+\begin{cchunk}
+   % ./example <any args needed>
+\end{cchunk}
+
+You can edit the example driver to play around with it, if you like,
+but it's better to make a copy of it in your own file (say,
+\ccode{foo\_example.c}) so you're not changing Easel's code. When you
+extract the code into a file, copy what's between the \ccode{\#ifdef
+eslFOO\_EXAMPLE} and \ccode{\#endif /*eslFOO\_EXAMPLE*/} flags that
+conditionally include the example driver (don't copy the flags
+themselves).  Compile your example code like this:
+
+\begin{cchunk}
+   % cc -o foo_example -L. -I. foo_example.c esl_foo.c -leasel -lm
+\end{cchunk}
+
+That's it. You're already compiling Easel programs that you can modify
+and play around with. If you're the type (like me) that learns best by
+example, you're on your way. When you want to know more about a
+module, either check that module's chapter in this guide, or
+UTSL.\footnote{``Use the source, Luke.''}.
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+(... BELOW HERE IS STILL JUNK ...)
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 
 A \textbf{test} driver is for unit testing. It provides a
 \ccode{main()} that runs some (preferably all) of a module's API. A
